--- a/app/src/main/res/layout/play_sentence_display.xml
+++ b/app/src/main/res/layout/play_sentence_display.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 <android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/play_sentence_area">
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
@@ -54,7 +55,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintStart_toEndOf="@+id/guideline"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:clickable="true">
 
         <TextView
             android:id="@+id/tv_itemStart"
@@ -93,84 +95,5 @@
 
 
     </LinearLayout>
-   <!-- <TextView
-        android:id="@+id/tv_itemStart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="8dp"
-        android:textSize="@dimen/play_sentence_text_size"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.75"
-        tools:text="item start" />
-
-
-
-    <TextView
-        android:id="@+id/tv_itemEnd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="item end"
-        android:textSize="@dimen/play_sentence_text_size"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        android:layout_marginRight="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintVertical_bias="0.75" />
-
-    <Button
-        android:id="@+id/btn_left"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textSize = "@dimen/play_choice_text_size"
-        android:padding="@dimen/play_choice_padding"
-        app:layout_constraintRight_toLeftOf="@+id/guideline"
-        android:layout_marginRight="32dp"
-        app:layout_constraintBottom_toBottomOf="@+id/target_area"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintVertical_bias="0.501" />
-
-    <Button
-        android:id="@+id/btn_right"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
-        android:padding="@dimen/play_choice_padding"
-        android:text=""
-        android:textSize="@dimen/play_choice_text_size"
-        app:layout_constraintBottom_toBottomOf="@+id/target_area"
-        app:layout_constraintLeft_toRightOf="@+id/btn_left"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.501" />
-
-    <ImageView
-        android:id="@+id/target_area"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/lightGrey"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/tv_itemEnd"
-        app:layout_constraintRight_toLeftOf="@+id/guideline"
-        app:layout_constraintStart_toEndOf="@+id/tv_itemStart"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.75" />-->
 </android.support.constraint.ConstraintLayout>
 </layout>
