--- a/app/src/main/res/layout/play_tester_panel.xml
+++ b/app/src/main/res/layout/play_tester_panel.xml
@@ -14,7 +14,8 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="@dimen/test_result_margin"
+        android:layout_marginStart="@dimen/test_result_margin"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
@@ -32,7 +33,8 @@
         app:layout_constraintBottom_toBottomOf="@+id/tv_sentence"
         android:layout_marginBottom="32dp"
         app:layout_constraintVertical_bias="0.25"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="@dimen/test_result_margin"
+        android:layout_marginStart="@dimen/test_result_margin"
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
@@ -40,8 +42,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginEnd="@dimen/test_result_margin"
+        android:layout_marginRight="@dimen/test_result_margin"
         android:layout_marginTop="8dp"
         android:textSize="18sp"
         tools:text="accuracy"
@@ -55,8 +57,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginEnd="@dimen/test_result_margin"
+        android:layout_marginRight="@dimen/test_result_margin"
         android:layout_marginTop="8dp"
         tools:text="RT"
         android:textSize="18sp"
