--- a/app/src/main/res/layout-land/play_sentence_display.xml
+++ b/app/src/main/res/layout-land/play_sentence_display.xml
@@ -3,8 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/play_sentence_area"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:clickable="true">
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline"
@@ -17,7 +19,7 @@
             android:id="@+id/btn_left"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/play_land_choice_bottom_margin"
+            android:layout_marginBottom="24dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="8dp"
             android:padding="@dimen/play_choice_padding"
@@ -31,7 +33,7 @@
             android:id="@+id/btn_right"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/play_land_choice_bottom_margin"
+            android:layout_marginBottom="24dp"
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
@@ -68,18 +70,21 @@
                 android:textSize="@dimen/play_sentence_text_size"
                 tools:text="item start" />
 
-            <ImageView
+            <TextView
                 android:id="@+id/target_area"
                 android:layout_width="100dp"
                 android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:layout_marginBottom="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:background="@color/lightGrey" />
+                android:layout_marginBottom="8dp"
+                android:layout_gravity="center"
+                android:background="@color/lightGrey"
+                android:text="@string/instruction_play_default"
+                android:gravity="center"
+                />
 
             <TextView
                 android:id="@+id/tv_itemEnd"
