--- a/app/src/main/res/layout-land/notification_picker_dialog.xml
+++ b/app/src/main/res/layout-land/notification_picker_dialog.xml
@@ -9,28 +9,30 @@
         android:id="@+id/notificationNumberPicker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/btn_notification_cancel" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_notification_info" />
 
     <NumberPicker
         android:id="@+id/notificationUnitPicker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/btn_notification_cancel" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_notification_info" />
 
     <Button
         android:id="@+id/btn_notification_cancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
-        android:textSize="8sp"
         android:text="@string/notification_cancel"
-        app:layout_constraintEnd_toStartOf="@+id/guideline2"
-        app:layout_constraintStart_toEndOf="@+id/guideline2"
-        app:layout_constraintTop_toBottomOf="@+id/tv_notification_info" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/notificationUnitPicker"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_notification_set"
