Fixed preferred language set after orientation change

--- a/app/src/main/res/layout/play_result_panel.xml
+++ b/app/src/main/res/layout/play_result_panel.xml
@@ -23,10 +23,12 @@
             android:id="@+id/tv_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:layout_marginLeft="@dimen/play_result_margin"
             android:layout_marginStart="@dimen/play_result_margin"
             android:layout_marginTop="8dp"
             android:textSize="@dimen/play_result_text_size"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_sentence"
             tools:text="Correct" />
@@ -35,10 +37,12 @@
             android:id="@+id/tv_accuracy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:layout_marginEnd="@dimen/play_result_margin"
             android:layout_marginRight="@dimen/play_result_margin"
             android:layout_marginTop="8dp"
             android:textSize="@dimen/play_result_text_size"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_rt"
             tools:text="80%" />
@@ -93,11 +97,13 @@
             android:id="@+id/lbl_accuracy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:layout_marginEnd="@dimen/play_result_margin"
             android:layout_marginRight="@dimen/play_result_margin"
             android:layout_marginTop="8dp"
             android:text="@string/label_accuracy"
             android:textSize="@dimen/play_result_text_size"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/tv_accuracy"
             app:layout_constraintTop_toBottomOf="@+id/tv_rt" />
 
