--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.melodispel.dpgame.MainActivity">
+    android:layout_height="match_parent">
 
     <Button
         android:id="@+id/btn_play"
-        android:layout_width="@dimen/main_navigation_choice_width"
-        android:layout_height="@dimen/main_navigation_choice_height"
+        android:layout_width="305dp"
+        android:layout_height="185dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
+        android:background="@color/colorTargetArea"
         android:text="Play"
         android:textSize="@dimen/play_choice_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -26,26 +26,9 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/btn_test"
-        android:layout_width="@dimen/main_navigation_choice_width"
-        android:layout_height="@dimen/main_navigation_choice_height"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="Test"
-        android:textSize="@dimen/play_choice_text_size"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
         android:id="@+id/btn_results"
-        android:layout_width="@dimen/main_navigation_choice_width"
-        android:layout_height="@dimen/main_navigation_choice_height"
+        android:layout_width="305dp"
+        android:layout_height="185dp"
         android:layout_marginBottom="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
@@ -54,6 +37,7 @@
         android:layout_marginTop="8dp"
         android:text="Results"
         android:textSize="@dimen/play_choice_text_size"
+        android:background="@color/colorTargetArea"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
