Choice buttons wrap content in portrait orientation

--- a/app/src/main/res/layout/play_sentence_display.xml
+++ b/app/src/main/res/layout/play_sentence_display.xml
@@ -16,32 +16,38 @@
 
     <Button
         android:id="@+id/btn_left"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginRight="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:background="@color/defaultChoiceBackground"
         android:padding="@dimen/play_choice_padding"
         android:text=""
         android:textSize="@dimen/play_choice_text_size"
-        android:background="@color/defaultChoiceBackground"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintRight_toLeftOf="@+id/guideline"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_right"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="8dp"
+        android:background="@color/defaultChoiceBackground"
         android:padding="@dimen/play_choice_padding"
         android:text=""
-        android:background="@color/defaultChoiceBackground"
         android:textSize="@dimen/play_choice_text_size"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/btn_left"
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toTopOf="parent" />
